add week dividers and recent analysis

--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
     <link
       rel="stylesheet"
@@ -20,7 +17,11 @@
         <div class="top-buttons">
           <i class="fa-solid fa-plus shadow" id="add"></i>
         </div>
-        <img src="assets/imgs/indoor-running.png" />
+        <div class="bottom-buttons">
+          <i id="trend-down" class="fa-solid fa-arrow-trend-down"></i>
+          <i id="trend-up" class="fa-solid fa-arrow-trend-up"></i>
+        </div>
+        <img src="assets/gifs/sport.gif" />
       </div>
     </section>
     <section>
